@@ -1,5 +1,14 @@
 2012-03-16  Paolo Bonzini  <bonzini@gnu.org>
 
+	* basicdefs.h (CAST, VCAST, VOID, MEMCPY, MEMMOVE): Rip out.
+	* sed/compile.c: Adjust.
+	* sed/execute.c: Adjust.
+	* sed/regexp.c: Adjust.
+	* sed/utils.c: Adjust.
+	* sed/utils.h: Adjust.
+
+2012-03-16  Paolo Bonzini  <bonzini@gnu.org>
+
 	* sed/execute.c: Unconditionally compile for MBCS.
 	* sed/mbcs.c: Unconditionally compile for MBCS.
 	* sed/sed.h: Unconditionally compile for MBCS.
